Fix incorrect text alignment

--- a/components/articles-inputs/parameter/number-input/NumberInput.module.scss
+++ b/components/articles-inputs/parameter/number-input/NumberInput.module.scss
@@ -3,6 +3,7 @@
   border: none;
   background-color: inherit;
   border-bottom: 1px solid black;
+  margin-bottom: -1px;
 }
 
 .value:focus {
